--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ToVisitMapApp"
         tools:targetApi="31">
+
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyAmSwO0VFs-Mk0GQI2kjf8SMJ5L6l7zfbU"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
